Documentation: Chapter revision and added Experimentacion.tex

--- a/doc/Acronimos.tex
+++ b/doc/Acronimos.tex
@@ -36,5 +36,12 @@
 
 \acro{NOSQLDB}[NO-SQL-DB]{Non-structured Data Base}
 
+\acro{CLI}[CLI]{Command-line-interface}
+
+\acro{UTC}[UTC]{Coordinated Universal Time}
+
+\acro{UUID}[UUID]{Universally unique identifier}
+
+\acro{PNG}[PNG]{Portable Network Graphics}
 
 \end{acronym}
