--- a/doc/Bibliografia.bib
+++ b/doc/Bibliografia.bib
@@ -26,19 +26,53 @@ number={},
 address={Ciutat, País},
 }
 
+@ARTICLE{Gpxpy01,
+author={Krajina, T.},
+title={Gpxpy. Project description},
+year={2012},
+url={https://pypi.org/project/gpxpy/},
+}
+
 @ARTICLE{Morales01,
-author={Aurelio Morales},
+author={Morales, A.},
 title={Los formatos GIS ráster más populares},
 year={2010},
 url={http://mappinggis.com/2015/12/los-formatos-gis-raster-mas-populares},
 }
 
+@ARTICLE{Docker01,
+author={Docker Inc.},
+title={Docker docs},
+year={2013-2020},
+url={https://docs.docker.com},
+}
+
+@ARTICLE{Docker02,
+author={Fong, J.},
+title={Are Containers Replacing Virtual Machines?},
+year={2018},
+url=https://www.docker.com/blog/containers-replacing-virtual-machines},
+}
 
 @ARTICLE{Topografix01,
-author={topografix},
+author={Topografix},
 title={GPX: the GPS Exchange Format},
 year={2010},
 url={https://www.topografix.com/gpx.asp},
+}
+
+@ARTICLE{Gpsvisualizer01,
+author={Gpsvisualizer},
+title={Generating a map from a GPX file, dynamically},
+url={https://www.gpsvisualizer.com/examples/google_gpx.html},
+}
+
+
+@ARTICLE{Topografix02,
+author={Topografix},
+title={GPX1.1 Schema},
+year={2010},
+url={https://www.topografix.com/GPX/1/1/gpx.xsd},
 }
 
 @ARTICLE{ArgGis01,
@@ -56,6 +90,27 @@ volume={2},
 pages={45 - 50},
 }
 %(Langley, R. B., "The Mathematics of GPS," GPS World, Vol. 2, No. 7, July/August 1991, pp. 45-50.).
+
+@ARTICLE{NationalGeographic01,
+author={National Geographic},
+title={GIS (Geographic Information System)},
+url={https://www.nationalgeographic.org/encyclopedia/geographic-information-system-gis},
+}
+
+
+@ARTICLE{Garrido-Villen01,
+author={Garrido-Villén, N.},
+title={Sistemas GNSS. Introducción a los sistemas de posicionamiento global (4)},
+year={2014},
+url={https://nagarvil.webs.upv.es/sistemas-gnss-introduccion},
+}
+
+@ARTICLE{Ramesh01,
+title={Hidden Markov Model Documentation},s
+author={Ramesh, R.},
+year={2017},
+month={August},
+}
 
 @BOOK{ElRabbany01,
 author={El-Rabbany,A. },
@@ -156,11 +211,6 @@ year={2010},
 url={http://www.columbia.edu/~ks20/4404-Sigman/4404-Notes-ITM.pdf},
 }
 
-
-
-
-
-
 @BOOK{Booth08,
   AUTHOR =       {Booth, W. C. and Colomb, G. G. and Williams, J. M.},
   TITLE =        {The craft of research},
@@ -177,6 +227,16 @@ url={http://www.columbia.edu/~ks20/4404-Sigman/4404-Notes-ITM.pdf},
   number={3},
   pages={129-132},
   year={2008},
+}
+
+@article{Viterbi01,
+  title={A personal history of the Viterbi algorithm},
+  author={A.J. Viterbi},
+  journal={IEEE Signal Processing Magazine},
+  volume={23},
+  number={4},
+  pages={120-142},
+  year={2006},
 }
 
 @article{Padgett08,
