--- a/doc/GuiaUso.tex
+++ b/doc/GuiaUso.tex
@@ -1,6 +1,6 @@
 %!TeX root=MemoriaTFG.tex
 
-\chapter{Guía de instalación y uso}
+\chapter{Guía de instalación y uso} \label{chapter:GuiaUso}
 En esta sección se explicará como poder ejecutar la aplicación dentro de nuestro equipo, así como 
 los comandos básicos para la ejecución de la aplicación.
 
